# blockfish

./: Cargo.toml  blockfish.proto
block-stacker/src/: ruleset.rs
blockfish-client/src/: controller.rs  controls.rs  main.rs  view.rs
blockfish-engine/: Cargo.toml
blockfish-engine/src/: common.rs  config.rs  finesse.rs  lib.rs  place.rs  shape.rs  stacker_util.rs
blockfish-engine/src/ai/: mod.rs
blockfish-lua/: Cargo.toml
blockfish-lua/src/: lib.rs
fishtest/cfg/: hello.txt  world.txt
scripts/: fishtest.py  gen-shtb.sh
support/: default-controls.json  techmino.json
support/test/: trs-shape-table.json
